# tradecat

./: .gitignore  1  AGENTS.md  CHANGELOG.md  CODE_LOCATIONS.md  FIX_PLAN.md  I18N_BUTTON_TODO.md  I18N_TODO.md  OPTIMIZATION_TODO.md  README.md  README_EN.md  TODO.md  TODO_综合任务清单.md  messages.mo  spec_security_dual_audit_template.md
.github/workflows/: ci.yml
config/: .env.example  logrotate.conf
docker/: test_deploy.sh
docs/: DEPLOY_PROMPT.md  ProxyCast配置文档.md  TODO_SLIDING_WINDOW.md  gemini_headless_guide.md  index.md  signal_audit_full.md  signal_audit_pg.md
libs/common/: i18n.py  symbols.py
libs/common/utils/: gemini_client.py
scripts/: check_env.sh  check_i18n_keys.py  download_hf_data.py  install.sh  start.sh  verify.sh
scripts/ddl/: sliding_window_retention.sql
services-preview/api-service/: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements.lock.txt  requirements.txt
services-preview/api-service/docs/: API_EXAMPLES.md  API_SPEC_COMPARISON.md  改动1.md
services-preview/api-service/scripts/: start.sh
services-preview/api-service/src/: __init__.py  __main__.py  app.py  config.py
services-preview/api-service/src/routers/: __init__.py  coins.py  funding_rate.py  futures_metrics.py  health.py  indicator.py  ohlc.py  open_interest.py  signal.py
services-preview/api-service/src/schemas/: __init__.py  models.py
services-preview/api-service/src/utils/: __init__.py  errors.py  symbol.py
services-preview/api-service/tests/: conftest.py
services-preview/fate-service/: AGENTS.md  README.md
services-preview/markets-service/docs/: ORDER_BOOK_AUDIT.md  order-book-audit-report.md  order_book_audit_2026-01-09.md
services-preview/vis-service/: Financial-Fractal-KLine-main.zip:Zone.Identifier  requirements.lock.txt  requirements.txt
services-preview/vis-service/scripts/: start.sh
services/ai-service/src/: pipeline.py
services/data-service/scripts/: start.sh
services/data-service/src/: __main__.py  config.py
services/markets-service/: README.md  TODO_CRYPTO_FIXES.md
services/markets-service/scripts/: download_bookdepth.py  (+4 more)
services/predict-service/: AGENTS.md  README.md
services/pronmarket/: .gitignore  .日志  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  users.json
services/telegram-service/: README.md  requirements.lock.txt  requirements.txt
services/vis-service/: requirements.txt
(+472 files in other folders)
